# decentralizer

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
archive/: V2.ipynb  community_clustering.ipynb  testing.ipynb
decentralizer/: __init__.py  cli.py  config.py
decentralizer/chain/: fetcher.py  provider.py  registry.py
decentralizer/dashboard/: app.py
decentralizer/dashboard/pages/: analytics.py  chat.py  communities.py  explorer.py  graph_viz.py  ml.py  smart_money.py
decentralizer/features/: __init__.py  export_numerai.py  normalize.py  on_chain.py  token_mapping.py
decentralizer/graph/: algorithms.py  builder.py  communities.py
decentralizer/labels/: __init__.py  etherscan.py  known.py
decentralizer/ml/gnn/: embeddings.py  models.py  trainer.py
decentralizer/ml/llm/: client.py
decentralizer/models/: schema.py
decentralizer/scoring/: __init__.py  export.py  pnl.py  smart_money.py
decentralizer/storage/: database.py  parquet.py
decentralizer/tokens/: __init__.py  constants.py  dex.py  pricing.py  transfers.py
